modified some lines

--- a/Documents/AEROFaltDetection.tex
+++ b/Documents/AEROFaltDetection.tex
@@ -22,7 +22,7 @@ Wind energy is fundamentally used to produce electric energy. Wind turbines (WTs
 
 Supervisory control and data acquisition (SCADA) is an application that collects data from a system and sends them to a central computer for monitoring and controlling. Current controlling monitor (CM) systems essentially provide the necessary sensor and capability of data capture required for monitoring.
 
-The research for  fault detections and diagnostic techniques has been widely studying using various methods \cite{tchakoua2014wind,wymore2015survey}. 
+The research for  fault detections and diagnostic techniques for wind turbines has been widely studying using various methods \cite{tchakoua2014wind,wymore2015survey}. 
 Clustering algorithms and principal components analysis \cite{kim2011use}, AI based framework \cite{wang2014scada}, performance evaluation and wake analysis \cite{astolfi2016mathematical}, various machine learning algormiths used in fault prediction for SCADA data \cite{kusiak2011prediction}.
 
 Meteorological masts  
