--- a/Working/Franco/Analysis/sensor_analysis_functions.ipynb
+++ b/Working/Franco/Analysis/sensor_analysis_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "            df_sensors[str(col) + '-cos*'] = np.sin(np.deg2rad(df_sensors[col])) \n",
     "    \n",
     "    \n",
-    "    for x in itertools.combinations(df_sensors.columns[~df_sensors.columns.str.contains('Timestamp')], 2):\n",
+    "    for x in tqdm(list(itertools.combinations(df_sensors.columns[~df_sensors.columns.str.contains('Timestamp')], 2))):\n",
     "        \n",
     "        # Fractions\n",
     "        if ('ratio' in func) or ('all' in func):\n",
@@ -90,16 +90,13 @@
     "            \n",
     "            #rolling_correlation = df_sensors[x[0]].rolling(correlation_window).corr(df_sensors[x[1]].rolling(correlation_window)).shift(2)\n",
     "            rolling_correlation = [np.corrcoef(df_sensors.loc[idx-correlation_window:idx, x[0]].values, df_sensors.loc[idx-correlation_window:idx, x[1]].values)[0][1] for idx, _ in df_sensors.iterrows()]\n",
-    "            \n",
-    "            \n",
     "            df_sensors[correlation_col_name] = rolling_correlation\n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
     "            df_sensors[correlation_col_name + '_anomaly'] = ''\n",
     "            df_sensors.loc[df_sensors[correlation_col_name] <= correlation_th, correlation_col_name + '_anomaly'] = 1\n",
     "            df_sensors.loc[df_sensors[correlation_col_name] > correlation_th, correlation_col_name + '_anomaly'] = 0\n",
+    "            \n",
+    "            \n",
+    "            \n",
     "            \n",
     "\n",
     "        # Difference\n",
@@ -117,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def anemometer_identification(df_stats, ratio_th = 10, correlation_th = .7, window = 10):\n",
+    "def anemometer_identification(df_stats, redundant_sensors, ratio_th = 10, correlation_th = .7, window = 10):\n",
     "    \n",
     "    df_to_return = df_stats.copy()\n",
     "    df_stast = df_stats.copy()\n",
@@ -144,8 +141,20 @@
     "        for col in ch_anem_columns:\n",
     "            if df_to_return.loc[idx, col] > 70:\n",
     "                ch_anem_to_join.append(col)\n",
+    "        \n",
+    "        def_keys = []\n",
+    "        for k in keys:\n",
+    "            try:\n",
+    "                if (df_to_return.loc[idx, k+'VS'+redundant_sensors[k]+'_correlation*_anomaly'] == 1 |\n",
+    "                    df_to_return.loc[idx, k+'VS'+redundant_sensors[k]+'_ratio*_anomaly'] == 1):\n",
+    "                    def_keys.append(k)\n",
+    "            except:\n",
+    "                pass\n",
+    "            \n",
+    "        df_to_return.loc[idx, 'broken?'] = ','.join(np.unique(def_keys+ch_anem_to_join))    \n",
     "\n",
-    "        df_to_return.loc[idx, 'broken?'] = ','.join(np.unique(keys+ch_anem_to_join))    \n",
+    "\n",
+    "    \n",
     "    \n",
     "    df_to_return.loc[df_to_return['broken?'] == '', 'broken?'] = 'None'\n",
     "    df_to_return.fillna('None', inplace=True)\n",
@@ -239,15 +248,11 @@
    "outputs": [],
    "source": [
     "def plot_sensors(df, index_start, index_finish, sensors=[]):\n",
-    "\n",
+    "    \n",
     "    time_col = df.columns[df.columns.str.contains('Time')]\n",
     "    \n",
     "    df_to_plot = df.loc[index_start - 20:index_finish+50, sensors]\n",
     "    df_to_plot['step'] = df.loc[index_start - 20:index_finish+50, time_col]\n",
-    "    \n",
-    "    #df_melt = df_to_plot.melt(id_vars='step', value_vars=sensors)\n",
-    "    \n",
-    "    #fig = px.line(df_melt, x='step', y='value', color='variable', title='Start: '+ str(df_to_plot.loc[index_start, 'step']) +' Ends: '+ str(df_to_plot.loc[index_finish, 'step']))\n",
     "    fig = go.Figure()\n",
     "    fig.add_trace(go.Scatter(x=df_to_plot['step'], y=df_to_plot[sensors[0]],\n",
     "                        mode='lines+markers',\n",
@@ -336,15 +341,14 @@
     "        for value in values:\n",
     "            fig = plot_sensors(df, value[0], value[-1], sensors=[key, redundance_dict[key]])\n",
     "            fig.write_html(f'anomaly_html/{dir_name}/{key}/{key}-{value[0]}.html', full_html=False)   \n",
-    "    \n",
+    "            \n",
     "        cont = 0\n",
     "        for file in tqdm(sorted(glob.glob(f\"anomaly_html/{dir_name}/{key}/*.html\"), key=os.path.getmtime)):\n",
     "            html += '<div><h3> Anomalia: '+ str(cont+1) +' en el sensor: '+ key +'</h3></div>'\n",
-    "            cont +=1\n",
     "            f = open(file, 'r', encoding='utf-8')\n",
     "            f = f.read()\n",
     "            html += str(f)\n",
-    "\n",
+    "            cont +=1\n",
     "        html += '</body></html>'\n",
     "\n",
     "        Html_file = open(f\"{dir_name}/filename_{key}.html\",\"w\")\n",
@@ -482,9 +486,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
