sensor_analysis notebook

--- a/Working/Franco/Analysis/sensor_analysis.ipynb
+++ b/Working/Franco/Analysis/sensor_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "from itertools import chain\n",
     "from tqdm import tqdm\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -61,7 +62,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -395,7 +401,12 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1956,11 +1967,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vaquerias = pd.read_csv('../Cleaner/data/vaquerias.csv', index_col=0)"
+    "df_vaquerias = pd.read_csv('../Cleaner/data/vaquerias.csv', index_col=0)\n",
+    "df_vaquerias.sort_values('Timestamp', inplace=True)\n",
+    "df_vaquerias.reset_index(drop=True, inplace=True)"
    ]
   },
   {
@@ -2334,6 +2347,82 @@
    "source": [
     "df_vaquerias_anemometer_identification['broken?'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_001082 = pd.read_csv('../Cleaner/data/001082.csv', index_col=0)\n",
+    "df_001082.sort_values('Timestamp', inplace=True)\n",
+    "df_001082.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_001082_redundant_sensors = {\n",
+    "    'Ch1Anem': 'Ch2Anem',\n",
+    "    'Ch2Anem': 'Ch1Anem',\n",
+    "    'Ch3Anem': 'Ch2Anem',\n",
+    "    'Ch4Anem': 'Ch5Anem',\n",
+    "    'Ch5Anem': 'Ch4Anem',\n",
+    "    'Ch6Anem': 'Ch5Anem',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [01:54<00:00,  7.97s/it]\n",
+      "100%|██████████| 6026/6026 [00:23<00:00, 261.51it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_001082_fault_detection = fault_detection(df_001082, sensor='anem', correlation_window=10, ratio_th = 10, correlation_th= .7)\n",
+    "df_001082_anemometer_identification = anemometer_identification(df_001082_fault_detection, df_001082_redundant_sensors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:00<00:00, 298.60it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "100%|██████████| 11/11 [00:00<00:00, 196.26it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "0it [00:00, ?it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_001082_anemometer_identification.name = '001082'\n",
+    "generate_dashboard(df_001082_anemometer_identification, redundance_dict=df_001082_redundant_sensors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
